RESOLVED FIXED108459
[WK2][Notifications] Missing early return in populateCopyOfNotificationPermissions
https://bugs.webkit.org/show_bug.cgi?id=108459
Summary [WK2][Notifications] Missing early return in populateCopyOfNotificationPermis...
Claudio Saavedra
Reported 2013-01-31 04:24:58 PST
[WK2][Notifications] Missing early return in populateCopyOfNotificationPermissions
Attachments
Patch (1.80 KB, patch)
2013-01-31 04:28 PST, Claudio Saavedra
no flags
Patch (1.74 KB, patch)
2013-02-07 01:17 PST, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2013-01-31 04:28:40 PST
Claudio Saavedra
Comment 2 2013-01-31 04:30:26 PST
Jon, could you please have a look at this? I found it while implementing a dummy provider for the GTK+ port. Thank you!
Jon Lee
Comment 3 2013-02-01 11:31:05 PST
Comment on attachment 185746 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=185746&action=review > Source/WebKit2/UIProcess/Notifications/WebNotificationManagerProxy.cpp:96 > + if (!knownPermissions) Wouldn't it be more appropriate to move this check before we clear out the permissions? If the client wishes to clear out the permissions, they should provide an empty dictionary instead.
Claudio Saavedra
Comment 4 2013-02-07 01:17:21 PST
Jon Lee
Comment 5 2013-02-07 08:08:00 PST
Unofficial r=me.
Claudio Saavedra
Comment 6 2013-02-11 06:04:19 PST
Who to ping to get this reviewed?
Jon Lee
Comment 7 2013-02-11 11:33:31 PST
Alexey, would you mind r+'ing the patch? It looks good to me.
WebKit Review Bot
Comment 8 2013-02-11 11:55:01 PST
Comment on attachment 187019 [details] Patch Clearing flags on attachment: 187019 Committed r142493: <http://trac.webkit.org/changeset/142493>
WebKit Review Bot
Comment 9 2013-02-11 11:55:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.